# atlas_ezo_ph

./: .gitignore  CMakeLists.txt  Kconfig  README.md
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/ph_sensor/: CMakeLists.txt  ph_sensor.c
dts/bindings/sensor/: atlas,ezo-ph-i2c.yaml  atlas,ezo-ph-uart.yaml  atlas,ezo-ph.yaml  atlas.yaml
include/drivers/sensor/: ph_sensor.h
samples/drivers/sensor/ph_sensor/: CMakeLists.txt  prj.conf  sample.yaml
samples/drivers/sensor/ph_sensor/boards/: nrf5340dk_i2c.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_uart.overlay
samples/drivers/sensor/ph_sensor/src/: main.c  test2.c
zephyr/: module.yml
